examples/springress.yaml
---
# Source: springress/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springress-gateway
  labels:
    app: springress-gateway
    chart: springress-0.1.0
    release: springress
    heritage: Tiller
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      protocol: TCP
      port: 9000
  selector:
    app: springress-gateway
    release: springress

---
# Source: springress/templates/deployment-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springress-controller
  labels:
    app: springress-controller
    chart: springress-0.1.0
    release: springress
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springress-controller
      release: springress
  template:
    metadata:
      labels:
        app: springress-controller
        release: springress
    spec:
      serviceAccountName: springress-controller
      containers:
        - name: controller
          image: "paulczar/springress-controller"
          imagePullPolicy: Always
          env: []

---
# Source: springress/templates/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springress-gateway
  labels:
    app: springress-gateway
    chart: springress-0.1.0
    release: springress
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springress-gateway
      release: springress
  template:
    metadata:
      labels:
        app: springress-gateway
        release: springress
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      serviceAccountName: springress
      
      containers:
        - name: springress
          
          image: "paulczar/springress:0.0.1-SNAPSHOT"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 300
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            {}
            

---
# Source: springress/templates/cm-app.yaml
